--- a/gene_exp.diff.Rmd
+++ b/gene_exp.diff.Rmd
@@ -4,6 +4,7 @@
 library(tidyverse)
 library(data.table)
 library(ggfortify)
+library(ggplot2)
 ```
 
 
@@ -52,11 +53,11 @@ FPKM
 ```{r}
 fpkm <- data.table::fread("./genes.fpkm_tracking", sep = "\t")
 
-names(fpkm)[26:29] <- names(fpkm)[26:29] %>%
+names(fpkm)[26:29] <- names(fpkm)[26:29] %>% # fix column names
   str_replace("ct2", "ct3")
 
 
-fpkm <- fpkm %>%
+fpkm <- fpkm %>% 
   select(tracking_id, ends_with("_FPKM"))
 ```
 
@@ -80,8 +81,49 @@ fpkm_norm$samples <- row.names(fpkm_norm)
 fpkm_norm.data <- fpkm_norm[-ncol(fpkm_norm)]
 ```
 
-Plot PCA
 ```{r}
-autoplot(prcomp(fpkm_norm.data), data = fpkm_norm, colour = "samples")
+fpkm_norm$type <- ifelse(grepl("norm", fpkm_norm$samples), "normal tissue",
+                            ifelse(grepl("ct", fpkm_norm$samples), "cancer tissue", "cancer cell line"))
+
+```
+
+
+```{r plot pca edit to scale}
+pca <- prcomp(fpkm_norm.data, scale. = FALSE)
+
+pca$x
+
+autoplot(pca, scale = FALSE, data = fpkm_norm, colour = "type")
+```
+
+
+
+Plot PCA
+```{r plot pca no edits to scale}
+autoplot(prcomp(fpkm_norm.data), data = fpkm_norm, colour = "type")
+```
+
+```{r fpkm boxplots of all samples across all genes}
+df <- t(fpkm) %>%
+  as.data.frame()
+
+df <- df[rowSums(df)>0,] #remove genes with 0 expression across all samples
+
+df <- df + 0.1
+
+
+group.colors <- c(norm1_FPKM = "#2D95F6", norm2_FPKM = "#2D95F6", 
+                  ct1_FPKM = "#FFFB14", ct2_FPKM = "#FFFB14", ct3_FPKM = "#FFFB14", 
+                  ccl1_FPKM = "#FE2323", ccl2_FPKM = "#FE2323", ccl3_FPKM = "#FE2323")
+
+reshape2::melt(df) %>%
+  ggplot(aes(x = variable, y = log10(value), fill = variable)) +
+  geom_boxplot() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
+  scale_fill_manual(values = group.colors)
+```
+
+```{r}
+data <- fread("./genes.fpkm_tracking")
+head(data)
 ```
 
